# clean-macos

./: .gitignore  INTEGRATION_SUMMARY.md  README.md  empty-trash.sh
.claude/skills/spec-builder/: EXAMPLE.md  QUICKSTART.md  SKILL.md
.claude/specs/ads-payment-integration/: design.md  requirements.md  research-ad-providers.md  research-payment-providers.md  tasks.md
.cursor/commands/: generate-tests-from-plan.md
.cursor/plans/: smart_scanner_page_feature_2a1f078c.plan.md
.cursor/rules/: skill-selection.mdc
.serena/: project.yml
cache-cleaner-app/: .gitignore  ADSENSE_SETUP.md  PADDLE_SETUP.md  README.md
cache-cleaner-app/.serena/: project.yml
cache-cleaner-app/docs/: ARCHITECTURE.md  ARCHITECTURE_SHOWCASE.md
cache-cleaner-app/src-tauri/: Cargo.toml  tauri.conf.json
cache-cleaner-app/src-tauri/capabilities/: default.json
cache-cleaner-app/src-tauri/src/: main.rs
cache-cleaner-app/src-tauri/src/cache/: browser_caches.rs  cache_dir.rs  chrome.rs  cleaner.rs  config.rs  custom_scanner.rs  dev_tools.rs  docker.rs  indexeddb.rs  large_caches.rs  mod.rs  npm.rs  npm_caches.rs  package_managers.rs  parallel_scanner.rs  paths.rs  registry.rs  scanner.rs  scanner_trait.rs  smart_suggestions.rs
cache-cleaner-app/src-tauri/src/monetization/: ad_manager.rs  errors.rs  mod.rs  payment_manager.rs  premium_service.rs  storage.rs
cache-cleaner-app/src-tauri/src/payment/: config.rs  mod.rs  paddle.rs  types.rs
cache-cleaner-app/src-tauri/src/utils/: access_tracker.rs  concurrency.rs  filesystem.rs  mod.rs  permissions.rs
cache-cleaner-app/ui/: index.html  package.json  vite.config.ts
cache-cleaner-app/ui/src/: App.tsx  (+1 more)
(+35 files in other folders)
