[package]
name = "cache-cleaner"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
# Paddle payment integration
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
# Encryption for premium status storage
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "cache-cleaner"
path = "src/main.rs"
